# GptPaper

./: README.md
server/: .env  pyproject.toml
server/src/gptpaper/: llm.py
server/tests/: llm_test.py
web/src/: App.vue  main.ts
web/src/components/pdfview/: PdfView.module.styl  PdfView.tsx
