[project]
name = "gptpaper"
version = "0.1.0"
description = ""
authors = [
    {name = "Ayden.Shu",email = "neolandg@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"

[tool.poetry]
packages = [
    {include = "gptpaper", from = "src"},
    {include = "tests", from = "."},
]

[tool.poetry.group.mcp.dependencies]
fastmcp = "^2.10.1"


[tool.poetry.group.server.dependencies]
fastapi = "^0.115.14"


[tool.poetry.dependencies]
langchain = "^0.3.26"
langgraph = "^0.5.1"
langchain-deepseek = "^0.1.3"
openai = "^1.93.0"
loguru = "^0.7.3"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
test = "tests.llm_test:main" 